alter finished project lucas e ilana

--- a/public/css/styleapply.css
+++ b/public/css/styleapply.css
@@ -188,9 +188,9 @@ img{
     margin-right: 10px;
 }
 .rest-price{
-    background-color: #f11313;
+    background-color: #26950a;
     color: #ffffff;
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 600;
     margin-right: 10px;
 }
