--- a/views/src/admin/contribuintes.ejs
+++ b/views/src/admin/contribuintes.ejs
@@ -23,12 +23,12 @@
         <br/>
 				<ul>
 					<li><a href="/gerencia">Dados</a></li>
-					<li class="colorlib-active"><a href="/contribuintes">Contribuintes</a></li>
+					<li class="colorlib-active"><a href="/contribuintes">Pagamentos</a></li>
 					<li><a href="/cadastrarpresente">Novo Presente</a></li>
 					<li><a href="/verpresente">Ver Presentes</a></li>
 					<li><a href="/novopadrinho">Novo Padrinho</a></li>
           <li><a href="/novoconvidado">Novo Convidado</a></li>
-					<li><a href="/gerencialitl">Sair</a></li>
+					<li><a href="/">Sair</a></li>
 				</ul>
 			</nav>
 		</aside> <!-- END COLORLIB-ASIDE -->
