--- a/views/src/login/loginadmin.ejs
+++ b/views/src/login/loginadmin.ejs
@@ -26,8 +26,8 @@
                 
                 <form method="post" action="/authenticateadmin">
                     <div class="form-container">
-                        <input name="login" type="text" placeholder="Login">
-                        <input name="pass" type="password" placeholder="Password">
+                        <input name="login" autocomplete="off" type="text" placeholder="Login">
+                        <input name="pass" autocomplete="off" type="password" placeholder="Password">
                         <button class="btn-login" type="submit">Acessar</button>
                     </div>
                     <p><a href="/"><b>Voltar</b></a> para página inicial.</p>
