--- a/views/src/admin/cadastrarpresente.ejs
+++ b/views/src/admin/cadastrarpresente.ejs
@@ -23,12 +23,12 @@
                 <br />
                 <ul>
                   <li><a href="/gerencia">Dados</a></li>
-                  <li><a href="/contribuintes">Contribuintes</a></li>
+                  <li><a href="/contribuintes">Pagamentos</a></li>
                   <li class="colorlib-active"><a href="/cadastrarpresente">Novo Presente</a></li>
                   <li><a href="/verpresente">Ver Presentes</a></li>
                   <li><a href="/novopadrinho">Novo Padrinho</a></li>
                   <li><a href="/novoconvidado">Novo Convidado</a></li>
-                  <li><a href="/gerencialitl">Sair</a></li>
+                  <li><a href="/">Sair</a></li>
                 </ul>
             </nav>
         </aside> <!-- END COLORLIB-ASIDE -->
@@ -48,16 +48,12 @@
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="inputEmail4">Nome do Produto</label>
-                                <input type="text" name="nome_product" class="form-control" id="inputEmail4" required placeholder="Nome do Produto">
+                                <input type="text" name="nome_product" autocomplete="off" class="form-control" id="inputEmail4" required placeholder="Nome do Produto">
                               </div>
                               <div class="form-group col-md-6">
-                                <label for="valorProduto">Valor do Produto [ Sem , ou . ]</label>
-                                <input type="text" name="valor_produto" class="form-control" id="valorProduto" required placeholder="Valor do Produto">
+                                <label for="valorProduto">Valor Produto</label>
+                                <input type="number" autocomplete="off" name="valor_produto" step="any" class="form-control" id="valorProduto" required placeholder="Valor do Produto">
                               </div>
-                            </div>
-                            <div class="form-group">
-                              <label for="valorTraco">Valor com Traço [ Sem , ou . ]</label>
-                              <input type="text" name="valor_traco" class="form-control" id="valorTraco" required placeholder="Desconto">
                             </div>
                             <div class="form-group">
                               <label for="inputAddress2">Status</label>
@@ -65,7 +61,7 @@
                             </div>
                             <div class="form-group">
                               <label for="descricao">Descrição do Presente</label>
-                              <input type="text" name="descricao"  class="form-control" required id="descricao" placeholder="Descrição do produto/presente">
+                              <input type="text" name="descricao"  autocomplete="off" class="form-control" required id="descricao" placeholder="Descrição do produto/presente">
                             </div>
                             <div class="form-row">
                               <div class="form-group col-md-12">
@@ -98,8 +94,8 @@
     
     <script>
         // Máscara para dinheiro
-        $('#valorTraco').mask('#.##0.00', { reverse: true });
-        $('#valorProduto').mask('#.##0.00', { reverse: true });
+        //$('#valorTraco').mask('#.##0.00', { reverse: true });
+        //$('#valorProduto').mask('#.##0.00', { reverse: true });
         //===================================================================================
     </script>
 
