--- a/views/src/admin/verpresente.ejs
+++ b/views/src/admin/verpresente.ejs
@@ -23,12 +23,12 @@
         <br/>
 				<ul>
 					<li><a href="/gerencia">Dados</a></li>
-					<li><a href="/contribuintes">Contribuintes</a></li>
+					<li><a href="/contribuintes">Pagamentos</a></li>
 					<li><a href="/cadastrarpresente">Novo Presente</a></li>
 					<li class="colorlib-active"><a href="/verpresente">Ver Presentes</a></li>
 					<li><a href="/novopadrinho">Novo Padrinho</a></li>
           <li><a href="/novoconvidado">Novo Convidado</a></li>
-					<li><a href="/gerencialitl">Sair</a></li>
+					<li><a href="/">Sair</a></li>
 				</ul>
 			</nav>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -70,12 +70,12 @@
                                       </div>
                                     </td>
                                     <td>
-                                      <p class="text-muted mb-0">R$ <%= presente.valor_produto %>,00</p>
+                                      <p class="text-muted mb-0">R$ <%= presente.valor_produto %></p>
                                     </td>
                                     <td>
                                       <span class="badge badge-warning rounded-pill d-inline"><%= presente.status_produto %></span>
                                     </td>
-                                    <td><%= presente.falta %>,00R$</td>
+                                    <td><%= presente.falta %> R$</td>
                                     <td>Pix|Boleto</td>
                                     <td>
                                         <img
