Finished alterações casamento

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,8 +128,6 @@
 							<div class="col-lg-8 col-md-6 col-sm-12">
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Ilana Grazielle</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
-								<p>Vou ser a noiva mais linda , assinado o noivo que fez o site.
-								</p>
 							</div>
 						</div>
 						<div class="row align-items-center about-main-info">
@@ -146,10 +144,6 @@
 							<div class="col-lg-8 col-md-6 col-sm-12">
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Lucas Pereira</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
-								<p>Está muito animado pra realizar este sonho. Sempre pensou em se doar e amar de todo
-									o coração o Senhor e amar a sua esposa como Cristo se sacrificou pela igreja. Fez
-									o sistema que você tá usando nesse momento. é isso...
-								</p>
 							</div>
 						</div>
 					</div>
@@ -190,8 +184,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+								<p class="lead">Nosso pedido de namoro em palmeira dos índios no restaurante Loucos por Macarronada.</p>
 							</div>
 						</div>
 					</div>
@@ -209,8 +202,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+								<p class="lead">O dia em que comemoramos o nosso 1º ano de namoro. <3 </p>
 							</div>
 						</div>
 					</div>
@@ -228,8 +220,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+								<p class="lead">Quando fizemos 2 anos de namoro e compramos uma pizza em formato de coração.</p>
 							</div>
 						</div>
 					</div>
@@ -247,8 +238,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">For 2 years of work as support engineer responsible about installing and
-									maintenance SWIFT packages for banks. I gain a lot from it before i leave country.
+								<p class="lead">Nosso 3º ano de namoro quando estavamos enfretando o covid mas ficou tudo bem! Graças a Deus
 								</p>
 							</div>
 						</div>
@@ -263,11 +253,11 @@
 							<div class="image">
 								<img src="images/time-05.jpg" alt="" />
 								<div class="title">
-									<h2>Pedido de Casamento [Cinema] Ver <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
+									<h2>Pedido de Casamento <a href="https://drive.google.com/file/d/1-09mdFder8j_5X2CztpTSdMYlJ8F6mCQ/view?usp=sharing" target="_blank" style="cursor: pointer; color: white;">Assistir Vídeo </a>  <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">Pedido de casamento mais inusitado no cinema do Shopping Arapiraca Garden Shopping, onde alugamos o telão do cinema para o pedido.</p>
+								<p class="lead">Pedido de casamento mais inusitado no cinema do Arapiraca Garden Shopping, onde alugamos o telão do cinema para o pedido.</p>
 							</div>
 						</div>
 					</div>
@@ -286,7 +276,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">Dia em que oficializamos nosso noivado na presença de nossos familiares e amigos com a Benção de nosso Deus e Senhor Jesus Cristo todo poderoso.</p>
+								<p class="lead">Dia em que oficializamos nosso noivado na presença de nossos familiares e amigos com a Benção de nosso Deus e Senhor Jesus Cristo Todo Poderoso.</p>
 							</div>
 						</div>
 					</div>
@@ -325,7 +315,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">Dia em que comemoramos o nosso tão esperado, 4 anos de relacionamento e muito amor, confidência e cumplicidade. Muito felizes e esperançosos de tempos melhores.</p>
+								<p class="lead">Dia do nosso pré-wedding <a href="#gallery">[Ver fotos]</a></p>
 							</div>
 						</div>
 					</div>
@@ -402,11 +392,78 @@
 						</a>
 					</li>
 					<li>
+						<a href="ilanaelucasforever/200A1322.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1322.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+					<li>
+						<a href="ilanaelucasforever/200A0897.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1425.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+					<li>
+						<a href="ilanaelucasforever/200A0897.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1429.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+					<li>
+						<a href="ilanaelucasforever/200A0897.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1443.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+
+					<li>
+						<a href="ilanaelucasforever/200A1491.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1491.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+					<li>
+						<a href="ilanaelucasforever/200A1530.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1530.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+
+					<li>
+						<a href="ilanaelucasforever/200A1152.png">
+							<img class="img-fluid" src="ilanaelucasforever/200A1152.png" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+					<li>
+						<a href="ilanaelucasforever/200A1459.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1459.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+
+					<li>
 						<a href="ilanaelucasforever/200A0910.jpg">
 							<img class="img-fluid" src="ilanaelucasforever/200A0910.jpg" alt="single image">
 							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
+
+					<li>
+						<a href="ilanaelucasforever/Prancheta 5.png">
+							<img class="img-fluid" src="ilanaelucasforever/Prancheta 5.png" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+
+					<li>
+						<a href="ilanaelucasforever/200A1346.jpg">
+							<img class="img-fluid" src="ilanaelucasforever/200A1346.jpg" alt="single image">
+							<span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+						</a>
+					</li>
+
+					
 				</ul>
 			</div>
 		</div>
