--- a/views/src/padrinhos/index.ejs
+++ b/views/src/padrinhos/index.ejs
@@ -113,7 +113,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="fh5co-countdown">
+		<!--<div id="fh5co-countdown">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<p class="countdown">
@@ -124,7 +124,7 @@
 					</p>
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 		<div id="fh5co-groom-bride">
 			<div class="container">
