Time do Loader alterado

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,11 +38,11 @@
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98" onclick="play()">
 	<audio id="audioCasamentoLucaseIlana" src="./musica/Elesseamam.mp3" autoplay loop>  <p>Seu navegador não suporta o elemento audio </p> </audio> 
 	<!-- LOADER -->
-	<div id="preloader">
+	<!--<div id="preloader">
 		<div class="preloader pulse">
 			<h3>Ilana Grazielle & Lucas P.</h3>
 		</div>
-	</div><!-- end loader -->
+	</div>--><!-- end loader -->
 	<!-- END LOADER -->
 
 	<!-- Start header -->
