--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<!-- Site Metas -->
-	<title>Lucas e Ilana - Site dos Noivos | Compartilhe conosco este momento</title>
+	<title>Lucas e Ilana - Site dos Noivos || Compartilhe conosco este momento</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta name="author" content="">
